Can search data about IP now

--- a/index.html
+++ b/index.html
@@ -34,37 +34,42 @@
     <header>
       <div class="bg">
         <div class="header-text">IP Address Tracker</div>
-        <div class="search">
+        <form class="search">
           <input
           id="ip"
             type="text"
             placeholder="Search for any IP address or domain"
+            required
           /><button id="go" class="go">
             <img src="/images/icon-arrow.svg" alt="" />
           </button>
-        </div>
+        </form>
       </div>
     </header>
 
     <div class="display">
-      <div class="" id="ip">
-        <h1>IP Address</h1>
+      <div  class="ipAdd">
+        <p>IP Address</p>
+        <h1 id="ipAdd"></h1>
       </div>
-      <div class="" id="location">
-        <h1>Location</h1>
+      <div  class="location">
+        <p>Location</p>
+        <h1 id="location"></h1>
       </div>
-      <div class="" id="timezone">
-        <h1>Timezone</h1>
+      <div  class="timezone">
+        <p>Timezone</p>
+        <h1>UTC<span id="timezone"></span></h1>
       </div>
-      <div class="" id="isp">
-        <h1>ISP</h1>
+      <div  class="isp">
+        <p>ISP</p>
+        <h1 id="isp"></h1>
       </div>
         
     <!-- add offset value dynamically using the API -->
     
     </div>
     <div class="leaflet">
-      <h1>Hi</h1>
+      <h1></h1>
     </div>
 
     <!-- <div class="attribution">
