Added map from Geolocation API by Mapbox

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+ <script src='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.js'></script>
+<link href='https://api.mapbox.com/mapbox-gl-js/v2.1.1/mapbox-gl.css' rel='stylesheet' />
     <link
       rel="icon"
       type="image/png"
@@ -68,8 +69,7 @@
     <!-- add offset value dynamically using the API -->
     
     </div>
-    <div class="leaflet">
-      <h1></h1>
+    <div id="leaflet">
     </div>
 
     <!-- <div class="attribution">
@@ -78,6 +78,8 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div> -->
+   
+
     <script src="/JS/main.js"></script>
   </body>
 </html>
