Fixed problems with loading assets

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             placeholder="Search for any IP address or domain"
             required
           /><button id="go" class="go">
-            <img src="/images/icon-arrow.svg" alt="" />
+            <img src="images/icon-arrow.svg" alt="" />
           </button>
         </form>
       </div>
@@ -80,6 +80,6 @@
     </div> -->
    
 
-    <script src="/JS/main.js"></script>
+    <script src="JS/main.js"></script>
   </body>
 </html>
